@@ -594,6 +594,13 @@ Lists all the quests being managed by the quest manager, along with the current 
 status of the quest (running, or not), and if it is time-delayed, how long until \
 the quest will attempt to start again.
 
+LIST_QUESTNAMES=\
+Command  : LIST \n\r\
+Usage    : LIST QUESTNAMES\n\r\
+Example  : list questNAMEs\n\r\
+Lists all the quests being managed by the quest manager, along with the display \
+name of the quests (if any).
+
 LIST_QUESTWINNERS=\
 Command  : LIST \n\r\
 Usage    : LIST QUESTWINNERS (NAME)\n\r\
